Fixed inline styling and image distortion

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@ a {
   justify-content: space-between;
   margin-top: 10rem;
 }
+
 li {
   margin: 10px 0;
 }
@@ -29,6 +30,7 @@ li {
   margin: 70px 0;
   margin-left: auto;
   margin-right: auto;
+  width:812px;
 }
 
 #puppeteer-img {
@@ -39,5 +41,10 @@ li {
 
 ul {
   list-style: square;
-
 }
+
+#hack-illinois {
+  width:512px;
+}
+
+
